more styling for project displays; tech lists will not align correctly

--- a/app/style.scss
+++ b/app/style.scss
@@ -1,13 +1,17 @@
 $dark-green: #0f292f;
+$med-green: #13373f;
 $light-green: #14a098;
 $bright-green: #13dfd4;
+
+$dull-white: #aaaaaa;
 $white: #cccccc;
 $bright-white: #ffffff;
+
 $pink: #cb2d6f;
 $purple: #723356;
 
-$project-display-height: 300px;
-$project-display-width: 500px;
+$project-display-height: 400px;
+$project-display-width: 900px;
 
 html, body {
   background-color: $dark-green;
@@ -19,8 +23,28 @@ html, body {
   align-items: center;
 }
 
+h1, h2 {
+  font-family: 'Prompt', sans-serif;
+  color: $bright-white;
+}
+
 h1 {
-  font-family: 'Archivo Black', sans-serif;
+  font-size: 48px;
+}
+
+h2 {
+  font-size: 36px;
+}
+
+p {
+  font-family: 'Titillium Web', sans-serif;
+  font-size: 16px;
+  color: $white;
+}
+
+.techs {
+  font-family: 'Source Code Pro', monospace;
+  font-size: 12px;
 }
 
 nav {
@@ -93,7 +117,7 @@ nav {
 .logo a {
   text-decoration: none;
   color: $light-green;
-  font-family: 'Quicksand', sans-serif;
+  font-family: 'Titillium Web', sans-serif;
   font-size: 30px;
 }
 
@@ -113,15 +137,16 @@ nav {
   height: $project-display-height;
   margin: 10px;
   display: flex;
-  border: 1px solid white;
 }
 
 .project-display:nth-child(2n+1) {
   flex-direction: row;
+  text-align: left;
 }
 
 .project-display:nth-child(2n) {
   flex-direction: row-reverse;
+  text-align: right;
 }
 
 .project-thumbnail {
@@ -138,5 +163,39 @@ img {
 
 .project-info {
   color: $white;
-  background-color: $purple;
+  width: 500px;
+}
+
+.project-details-text {
+  width: 50%;
+}
+
+.project-display:nth-child(2n+1) .project-details {
+  flex-direction: column;
+  align-items: flex-end;
+}
+
+.project-display:nth-child(2n) .project-details {
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+.project-display:nth-child(2n+1) .techs {
+  text-align: center;
+}
+
+.project-display:nth-child(2n) .techs {
+  text-align: center;
+}
+
+.project-details {
+  background-color: $med-green;
+}
+
+.techs {
+  display: flex;
+  flex-direction: row;
+  color: $dull-white;
+  list-style: circle;
+  list-style-position: inside;
 }
